# representation_plugins

./: README.md
map_handler/: CMakeLists.txt  package.xml
map_handler/include/map_handler/: fov.hpp  frustum_fov.hpp  map_handler.hpp  semantic_map_handler.hpp
map_handler/src/: frustum_debug.cpp
map_handler/src/map_handler/: frustum_fov.cpp  map_handler.cpp
representation_plugin_base/: CMakeLists.txt  package.xml
representation_plugin_base/include/representation_plugin_base/: plugin_base.hpp  regions_register.hpp
representation_plugin_base/src/representation_plugin_base/: plugin_base.cpp  regions_register.cpp
representation_plugins/: CMakeLists.txt  package.xml  plugins.xml
representation_plugins/include/representation_plugins/: irresponsible_plugin_base.hpp  object_plugin.hpp  plugin_another_box_test.hpp  plugin_box_test.hpp  plugin_test.hpp  semantic_plugin.hpp  semantic_plugin_base.hpp
representation_plugins/src/representation_plugins/: plugin_another_box_test.cpp  plugin_base.cpp  plugin_box_test.cpp  plugin_test.cpp  semantic_plugin.cpp  semantic_plugin_base.cpp
