<?xml version="1.0"?>
<package format="3">
  <name>representation_plugin_base</name>
  <version>0.0.0</version>
  <description>Representation plugin base package</description>

  <maintainer email="anon@anon.ymous">Anon Ymous</maintainer>

  <license>Apache License 2.0</license>

  <author email="anon@anon.ymous">Anon Ymous</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>reg_of_space_server</depend>
  <depend>tbb</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
