<?xml version="1.0"?>
<package format="3">
  <name>representation_plugins</name>
  <version>1.9.9</version>
  <description>A bunch of plugins</description>

  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>PAL Robotics S.L.</license>

  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>representation_plugin_base</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
