<?xml version="1.0"?>
<package format="3">
  <name>representation_plugins</name>
  <version>0.0.0</version>
  <description>A bunch of plugins</description>

  <maintainer email="anon@anon.ymous">Anon Ymous</maintainer>

  <license>Apache License 2.0</license>

  <author email="anon@anon.ymous">Anon Ymous</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>representation_plugin_base</depend>
  <depend>map_handler</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>vdb2pc</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <representation_plugin_base plugin="${prefix}/plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
